# pldm

./: meson.build  meson.options
common/: utils.cpp  utils.hpp
platform-mc/: platform_manager.cpp
pldmd/: pldmd.cpp
pldmtool/: pldm_cmd_helper.cpp  pldm_cmd_helper.hpp  pldm_platform_cmd.cpp  pldm_rde_cmd.cpp  pldmtool.cpp
rde/: device.cpp  device.hpp  device_common.hpp  dictionary.cpp  dictionary.hpp  dictionary_manager.cpp  dictionary_manager.hpp  discov_session.cpp  discov_session.hpp  manager.cpp  manager.hpp  multipart_send.cpp  multipart_send.hpp  operation_session.cpp  operation_session.hpp  pdr_plat_helper.hpp  redfish_resource_example.json  redfish_resource_manager.cpp  redfish_resource_manager.hpp  redfish_resource_pdr_view.cpp  redfish_resource_pdr_view.hpp  resource_registry.cpp  resource_registry.hpp
rde/test/: meson.build  redfish_resource_manager_test.cpp  redfish_resource_pdr_view_test.cpp
